# sphinx-c-autodoc-bug-mwe

./: .gitignore  README.md  conf.py  index.rst  pyproject.toml
code/: mwe.h
