[project]
name = "cautodoc-mwe"
version = "0.1.0"
description = ""
authors = [
    {name = "Gregor Vollmer",email = "git@dynamic-noise.net"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sphinx (>=8.2.3,<9.0.0)",
    "cloud-sptheme (>=1.10.1.post20200504175005,<2.0.0)",
    "sphinxcontrib-plantuml (>=0.30,<0.31)",
    "clang (>=18.0.0,<19.0.0)",
    "sphinx-c-autodoc (>=1.4.0,<2.0.0)"
]

[tool.poetry]
package-mode = false


[tool.poetry.dependencies]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
